--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "farofita",
-  "short_name": "farofita",
+  "name": "barbearia",
+  "short_name": "barbearia",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
